-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.4, 6.3.2, 6.4.1, 6.5.0 FF
-
None
-
-
42775c91e (dev), aeffa124c (6.4), c9cc3a96f (6.5)
Quick Text's implicitWidth doesn't respect maximumLineCount
Sample code:
import QtQuick Window { width: 300 height: 200 visible: true Rectangle { anchors.fill: txt color: 'red' } Text { id: txt anchors.centerIn: parent text: "1st line\n2nd long long long long long long line" maximumLineCount: 1 } }

- relates to
-
QTBUG-89557 QML Text's implicitWidth is wrong when wrapMode is set for multiline text.
-
- Closed
-