Text: respect to maximumLineCount when calculating implicitWidth

Do not add extra lines into QTextLayout until they're really needed,
because this may affect layout's maximumWidth. So, in this particular
case, we need to avoid an extra call to layout.createLine() for lines
that exceed maximumLineCount value.

Fixes: QTBUG-109411
Change-Id: I92daa3ee4bb3fdd73515b76374c1dca21757ddf0
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 42775c91e83940aa0339ccbb04f9b3d14938a3dd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>